kubernetes-example/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: helm-api
  annotations: {}
  name: helm-api
  namespace: kube-system
spec:
  ports:
    - port: 80
      protocol: TCP
      targetPort: 8080
  selector:
    app: helm-api
  type: ClusterIP
